--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,13 @@
 }
 
 .title-text {
-    @apply text-3xl sm:text-5xl font-bold
+    @apply text-4xl sm:text-5xl font-bold text-center mb-2
 }
 
 .navigations {
     @apply hover:text-gray-500 hover:underline decoration-gray-500 underline-offset-[1rem] pb-2
+}
+
+.pre-title {
+    @apply text-slate-600 text-center p-4
 }
